[package]
name = "async_dataloader"
version = "0.1.0"
authors = ["Ben Aubin <ben@benaubin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.13"
slab = "0.4.2"


[dev-dependencies]
futures = {version = "0.3.13", features=["executor"]}