[package]
name = "async_dataloader"
version = "0.1.3"
authors = ["Ben Aubin <ben@benaubin.com>"]
edition = "2018"
repository = "https://github.com/benaubin/gq/tree/main/async_dataloader"
license = "MIT"
description = "Powerful tool for avoiding N+1 queries using async/await, based on the DataLoader pattern."
documentation = "https://docs.rs/async_dataloader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.13"
slab = "0.4.2"


[dev-dependencies]
futures = {version = "0.3.13", features=["executor"]}