[package]
name = "gq_macros"
version = "0.1.0"
authors = ["Ben Aubin <ben@benaubin.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
gq_internals = { path = "../gq_internals" }
heck = "0.3.2"
proc-macro2 = "1.0.24"
